nestc/src/parser/snapshots/nestc__parser__tests__control_flow_and_ranges.snap
---
source: src/parser/tests.rs
expression: "tree(\"\\\nmain :: func () {\n  let i := 0\n  while i < 10 { i += 1 }\n  for x in 0..<n { total = total + x }\n  const first := loop { if done { break x } }\n  const label := if port == 80 { \\\"http\\\" } else { \\\"custom\\\" }\n  const s := xs[1..<3]\n  const t := xs[..]\n}\n\")"
---
File
  ConstBind ::
    BindingPat main
    FuncExpr
      Block
        LocalDecl let
          BindingPat i
          Lit Int(0)
        While
          Binary Lt
            Path `i`
            Lit Int(10)
          Block
            Assign Add
              Path `i`
              Lit Int(1)
        For
          BindingPat x
          Range ..< [start, end]
            Lit Int(0)
            Path `n`
          Block
            Assign Assign
              Path `total`
              Binary Add
                Path `total`
                Path `x`
        LocalDecl const
          BindingPat first
          Loop
            Block (has tail)
              If
                Path `done`
                Block
                  Break
                    Path `x`
        LocalDecl const
          BindingPat label
          If (has else)
            Binary Eq
              Path `port`
              Lit Int(80)
            Block (has tail)
              Lit Str("http")
            Block (has tail)
              Lit Str("custom")
        LocalDecl const
          BindingPat s
          Slice
            Path `xs`
            Range ..< [start, end]
              Lit Int(1)
              Lit Int(3)
        LocalDecl const
          BindingPat t
          Slice
            Path `xs`
            Range .. [unbounded]
