nestc/src/parser/snapshots/nestc__parser__tests__default_arguments_parse.snap
---
source: src/parser/tests.rs
expression: "tree(\"\\\npad :: func (s: string, width: usize := 8, fill: char := ' ') -> string {\n    s\n}\nmk :: func (c: Cfg := .{ a: 1 }, n: i32 := $cast.<i32>(2)) {\n}\n\")"
---
File
  ConstBind ::
    BindingPat pad
    FuncExpr
      Param s:
        TypePath
          Path `string`
      Param width: (default :=)
        TypePath
          Path `usize`
        Lit Int(8)
      Param fill: (default :=)
        TypePath
          Path `char`
        Lit Char(' ')
      TypePath
        Path `string`
      Block (has tail)
        Path `s`
  ConstBind ::
    BindingPat mk
    FuncExpr
      Param c: (default :=)
        TypePath
          Path `Cfg`
        CompositeLit (inferred, named)
          FieldInit a:
            Lit Int(1)
      Param n: (default :=)
        TypePath
          Path `i32`
        IntrinsicCall $cast
          TypePath
            Path `i32`
          Arg
            Lit Int(2)
      Block
